tests/fixtures/compile_errors/emit_undefined_event.fe
contract Bar:

  pub def test():
    emit DoesNotExist()